<?xml version="1.0" encoding="utf-8"?>

<com.factor.bouncy.BouncyNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--    <EditText-->
        <!--        android:id="@+id/pinText"-->
        <!--        android:layout_width="150dp"-->
        <!--        android:inputType="numberDecimal"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
        <!--        app:layout_constraintRight_toRightOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent"-->
        <!--        app:layout_constraintVertical_bias="0.2"-->
        <!--        />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pinTextContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pinText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:inputType="numberDecimal"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retryIntervalTextContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pinTextContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/retryTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retry_interval"
                android:inputType="numberDecimal"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:text="@string/start"
            app:layout_constraintEnd_toStartOf="@id/endBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retryIntervalTextContainer" />

        <Button
            android:id="@+id/endBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/stop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/startBtn"
            app:layout_constraintTop_toTopOf="@id/startBtn" />

        <Button
            android:id="@+id/exploreCentersBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/explore_nearby_covid_centers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.factor.bouncy.BouncyNestedScrollView>

